Adjusted some minor bugs
